[package]
name = "p2p_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
async-trait = "0.1"
futures = "0.3.30"
libp2p = { version = "0.54.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
rust-ini = "0.21.0"
lazy_static = "1.5.0"
home = "0.5.9"

[dependencies.crossterm]
version = "0.27.0"
features = ["event-stream"]

